[gd_scene load_steps=14 format=2]

[ext_resource path="res://classes/game/view/Playground.gd" type="Script" id=1]
[ext_resource path="res://classes/game/view/boxes/TimeBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://classes/game/view/boxes/SalaryBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://classes/game/view/boxes/IncomeBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://classes/game/view/boxes/GoldBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://classes/game/view/Battelfield.tscn" type="PackedScene" id=6]
[ext_resource path="res://classes/game/view/buttons/create_troop/CreateSwordsmanButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://classes/game/view/buttons/create_troop/CreateSpearmanButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://classes/game/view/buttons/create_troop/CreateArcherButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://classes/game/view/buttons/create_troop/CreateKnightButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://classes/game/view/buttons/create_troop/CreateCatapultButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://classes/game/view/bars/HealthBar.tscn" type="PackedScene" id=12]
[ext_resource path="res://classes/game/view/bars/QueueBar.tscn" type="PackedScene" id=13]

[node name="Playground" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.490196, 0.439216, 0.380392, 1 )

[node name="Top" type="MarginContainer" parent="."]
margin_right = 1120.0
margin_bottom = 100.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TopBar" type="HBoxContainer" parent="Top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1110.0
margin_bottom = 90.0
rect_min_size = Vector2( 1100, 80 )
custom_constants/separation = 24
alignment = 1

[node name="TimeBox" parent="Top/TopBar" instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 274.0
margin_bottom = 80.0

[node name="SalaryBox" parent="Top/TopBar" instance=ExtResource( 3 )]
margin_left = 298.0
margin_right = 538.0
margin_bottom = 80.0

[node name="IncomeBox" parent="Top/TopBar" instance=ExtResource( 4 )]
margin_left = 562.0
margin_right = 802.0
margin_bottom = 80.0

[node name="GoldBox" parent="Top/TopBar" instance=ExtResource( 5 )]
margin_left = 826.0
margin_right = 1066.0
margin_bottom = 80.0

[node name="Battelfield" parent="." instance=ExtResource( 6 )]

[node name="Right" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="RightBar" type="VBoxContainer" parent="Right"]
margin_left = 10.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 710.0
rect_min_size = Vector2( 120, 700 )
custom_constants/separation = 0

[node name="SwordsmanTroopButton" parent="Right/RightBar" instance=ExtResource( 7 )]
margin_right = 140.0
margin_bottom = 140.0

[node name="SpearmanTroopButton" parent="Right/RightBar" instance=ExtResource( 8 )]
margin_top = 140.0
margin_right = 140.0
margin_bottom = 280.0

[node name="ArcherTroopButton" parent="Right/RightBar" instance=ExtResource( 9 )]
margin_top = 280.0
margin_right = 140.0
margin_bottom = 420.0

[node name="KnightTroopButton" parent="Right/RightBar" instance=ExtResource( 10 )]
margin_top = 420.0
margin_right = 140.0
margin_bottom = 560.0

[node name="CatapultTroopButton" parent="Right/RightBar" instance=ExtResource( 11 )]
margin_top = 560.0
margin_right = 140.0
margin_bottom = 700.0

[node name="Bottom" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -111.0
margin_right = 1120.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="BottomBar" type="HBoxContainer" parent="Bottom"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1110.0
margin_bottom = 110.0
rect_min_size = Vector2( 1100, 80 )
custom_constants/separation = 26
alignment = 1

[node name="HealthBar" parent="Bottom/BottomBar" instance=ExtResource( 12 )]
margin_left = 37.0
margin_right = 537.0

[node name="QueueBar" parent="Bottom/BottomBar" instance=ExtResource( 13 )]
margin_left = 563.0
margin_right = 1063.0
[connection signal="timeout" from="Top/TopBar/TimeBox" to="." method="_on_TimeBox_timeout"]
[connection signal="castle_choosen" from="Battelfield" to="." method="_on_Battelfield_castle_choosen"]
